--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Covid-19 Stats</title>
+  <style>
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-size: 20px;
+      color: black;
+      background: white;
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="container"></div>
