--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Covid-19 Stats</title>
+  <title>Covid-19 Statistics</title>
   <style>
     body {
       width: 100%;
