Kinda wrapping up

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,11 @@
       font-size: 20px;
       color: black;
       background: white;
+      font-family: 'Roboto', sans-serif;
     }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto&display=swap" rel="stylesheet">
+  <link href="react-tag.css" rel="stylesheet">
 </head>
 <body>
   <div id="container"></div>
