--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="imagetoolbar" content="no" />
+  <meta name="author" content="Krasimir Tsonev" />
+  <meta name="copyright" content="Krasimir Tsonev" />
+  <meta name="robots" content="follow,index" />
+  <meta property="og:image" content="covid19.jpg" />
+  <meta property="og:title" content="Covid-19 statistics" />
+  <meta
+    name="title"
+    content="Covid-19 statistics"
+  />
+  <meta
+    name="keywords"
+    content="Covid-19 statistics"
+    lang="en-us"
+  />
+  <meta
+    name="description"
+    content="Covid-19 statistics"
+  />
   <title>Covid-19 Statistics</title>
   <style>
     body {
