--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,17 @@
 <body>
   <div id="container"></div>
   <script src="app.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1621908-16"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+  dataLayer.push(arguments);
+}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-1621908-16');
+  </script>
+
 </body>
 </html>
