Exposing an API

--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@
   <meta name="copyright" content="Krasimir Tsonev" />
   <meta name="robots" content="follow,index" />
   <meta property="og:image" content="covid19.jpg" />
-  <meta property="og:title" content="Covid-19 statistics" />
+  <meta property="og:title" content="Covid-19 Statistics & API" />
   <meta
     name="title"
-    content="Covid-19 statistics"
+    content="Covid-19 Statistics & API"
   />
   <meta
     name="keywords"
-    content="Covid-19 statistics"
+    content="Covid-19 Statistics & API"
     lang="en-us"
   />
   <meta
     name="description"
-    content="Covid-19 statistics"
+    content="Covid-19 Statistics & API"
   />
-  <title>Covid-19 Statistics</title>
+  <title>Covid-19 Statistics & API</title>
   <style>
     body {
       width: 100%;
