--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
   <link href="react-tag.css" rel="stylesheet">
 </head>
 <body>
-  <div id="container"></div>
+  <div data-id="container"></div>
   <script src="app.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1621908-16"></script>
